--- a/00-expressions/src/index.html
+++ b/00-expressions/src/index.html
@@ -14,8 +14,8 @@
 <script>mocha.setup('bdd')</script>
 
 <!-- Code -->
-<script src="expressions.js"></script>
-<script src="expressions-unit-tests.js"></script>
+<script src="./expressions.js"></script>
+<script src="./expressions-unit-tests.js"></script>
 
 
 <script>
